<resources>
    <string name="app_name">OrderApp</string>
    <string name="detail">详情</string>
    <string name="search">搜索</string>
    <string name="history_order">历史账单</string>
    <string name="goods_list">商品列表</string>
    <string name="no_goods">暂无商品</string>
    <string name="create_order">出单</string>
    <string name="modify">修改</string>
    <string name="orderlist">账单详情</string>
    <string name="set_goods">配货信息</string>
    <string name="excel_import">Excel导入</string>
    <string name="goods_type">货物类型(点击切换展开与收缩)</string>
    <string name="goods_lists">货物清单</string>
    <string name="add_goods">添加货物</string>
    <string name="input_goods_type">输入货物分类类型</string>
    <string name="input_goods_name">输入货物名称</string>
    <string name="input_goods_percent">输入货物单价</string>
    <string name="input_goods_unit">输入货物单价单位</string>
    <string name="no_permission">权限不足</string>
    <string name="tools">Tools</string>
    <string name="helper_easy_tools">辅助工具</string>
    <string name="delete">删除</string>
</resources>