<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddGoodsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backCard"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/shape_click_background"
                android:padding="5dp"
                android:src="@drawable/ic_back_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/set_goods"
                android:textColor="#515151"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@id/backCard" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/importExcel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:background="@drawable/shape_click_background"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/excel_import"
                android:textColor="@color/mainTheme"
                android:textSize="16sp"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/typeTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_click_background"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/goods_type"
        android:textColor="#515151"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/topCard" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/typeTitleArrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_arrow_down_black"
        app:layout_constraintBottom_toBottomOf="@id/typeTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/typeTitle" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/typeTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/typeRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/typeTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goodsTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="#EEF8F6F6"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/goods_lists"
        android:textColor="#515151"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/typeRecycler" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/goodsTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goodsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goodsTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/waitLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>