<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FAF6F6"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/goods_name_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_add_type_background"
            android:gravity="center_vertical"
            android:hint="@string/input_goods_name"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#515151"
            android:textColorHint="#A8A7A7"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/goods_image"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_add_type_background"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_name_edit" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/goods_percent_edit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_add_type_background"
            android:gravity="center_vertical"
            android:hint="@string/input_goods_percent"
            android:inputType="numberDecimal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#515151"
            android:textColorHint="#A8A7A7"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/goods_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_name_edit" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/goods_unit_edit"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_add_type_background"
            android:gravity="center_vertical"
            android:hint="@string/input_goods_unit"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#515151"
            android:textColorHint="#A8A7A7"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/goods_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_percent_edit" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/goods_type_submit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_click_background"
            android:padding="8dp"
            android:src="@drawable/ic_type_submit_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goods_unit_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>